multiple receipt save

--- a/app/elements/collection-receipt-card/collection-receipt-card.html
+++ b/app/elements/collection-receipt-card/collection-receipt-card.html
@@ -22,7 +22,7 @@
     <table style="width: 100%;">
     <tr><th>Sl.No</th><th>Particulars</th><th>Splitup</th><th style="text-align: right;">Amount</th></tr>
     <tr><th colspan="4"><hr></hr></th></tr>
-    <tr><td>1</td><td>{{feetype}}</td><td>{{installmentfeetype}}</td><td style="text-align: right;">{{amount}}</td></tr>
+    <tr><td>1</td><td>{{installment}}</td><td>{{installmentfeetype}}</td><td style="text-align: right;">{{amount}}</td></tr>
     </table>
     <hr></hr>
     <table style="width: 100%;">
@@ -44,7 +44,7 @@
     <table style="width: 100%;">
     <tr><th>Sl.No</th><th>Particulars</th><th>Splitup</th><th>Cheque No</th><th>Bank</th><th style="text-align: center;">Cheque Date</th><th style="text-align: right;">Amount</th></tr>
     <tr><th colspan="4"><hr></hr></th></tr>
-    <tr><td>1</td><td>{{feetype}}</td><td>{{installmentfeetype}}</td><td>{{transactionno}}</td><td>{{transactionname}}</td><td style="text-align: center;">{{transactiondate}}</td><td style="text-align: right;">{{amount}}</td></tr>
+    <tr><td>1</td><td>{{installment}}</td><td>{{installmentfeetype}}</td><td>{{transactionno}}</td><td>{{transactionname}}</td><td style="text-align: center;">{{transactiondate}}</td><td style="text-align: right;">{{amount}}</td></tr>
     </table>
     <hr></hr>
     <table style="width: 100%;">
@@ -66,7 +66,7 @@
     <table style="width: 100%;">
     <tr><th>Sl.No</th><th>Particulars</th><th>Splitup</th><th>Reference No</th><th>Bank</th><th style="text-align: center;">Date</th><th style="text-align: right;">Amount</th></tr>
     <tr><th colspan="4"><hr></hr></th></tr>
-    <tr><td>1</td><td>{{feetype}}</td><td>{{installmentfeetype}}</td><td>{{transactionno}}</td><td>{{transactionname}}</td><td style="text-align: center;">{{transactiondate}}</td><td style="text-align: right;">{{amount}}</td></tr>
+    <tr><td>1</td><td>{{installment}}</td><td>{{installmentfeetype}}</td><td>{{transactionno}}</td><td>{{transactionname}}</td><td style="text-align: center;">{{transactiondate}}</td><td style="text-align: right;">{{amount}}</td></tr>
     </table>
     <hr></hr>
     <table style="width: 100%;">
