--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -486,6 +486,41 @@
               <zonedistance-card></zonedistance-card>
             </div>
           </section>
+          <section data-category="transport-routing-routecreate-card">
+            <div class="col-md-12">
+              <transport-routing-routecreate-card></transport-routing-routecreate-card>
+            </div>
+          </section>
+          <section data-category="transport-routing-mappointtoroute-card">
+            <div class="col-md-12">
+              <transport-routing-mappointtoroute-card></transport-routing-mappointtoroute-card>
+            </div>
+          </section>
+          <section data-category="transport-routing-mapstudenttopoint-card">
+            <div class="col-md-12">
+              <transport-routing-mapstudenttopoint-card></transport-routing-mapstudenttopoint-card>
+            </div>
+          </section>
+          <section data-category="transport-routing-changepoint-card">
+            <div class="col-md-12">
+              <transport-routing-changepoint-card></transport-routing-changepoint-card>
+            </div>
+          </section>
+          <section data-category="transport-routing-routereport-card">
+            <div class="col-md-12">
+              <transport-routing-routereport-card></transport-routing-routereport-card>
+            </div>
+          </section>
+          <section data-category="transport-routing-gradewiseroute-report">
+            <div class="col-md-12">
+              <transport-routing-gradewiseroute-report></transport-routing-gradewiseroute-report>
+            </div>
+          </section>
+          <section data-category="transport-routing-trip-to-grade">
+            <div class="col-md-12">
+              <transport-routing-trip-to-grade></transport-routing-trip-to-grade>
+            </div>
+          </section>
           <!-- <section data-category="fee-card">
             <div class="col-md-12">
               <fee-card></fee-card>
