--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -374,3 +374,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="collection-discountinfo-card/collection-discountinfo-card.html">
 <link rel="import" href="collection-discount-datepicker/collection-discount-datepicker.html">
 <link rel="import" href="collection-receipt-card/collection-receipt-card.html">
+<link rel="import" href="transport-routing-routecreate-card/transport-routing-routecreate-card.html"><link rel="import" href="transport-routing-route-display-card/transport-routing-route-display-card.html">
+<link rel="import" href="transport-routing-mapstudenttopoint-service/transport-routing-mapstudenttopoint-service.html">
+<link rel="import" href="transport-routing-mappointtoroute-card/transport-routing-mappointtoroute-card.html">
+<link rel="import" href="transport-routing-transport-service/transport-routing-transport-service.html">
+<link rel="import" href="transport-routing-item-card/transport-routing-item-card.html">
+<link rel="import" href="transport-routing-timepicker-card/transport-routing-timepicker-card.html">
+<link rel="import" href="transport-routing-timepicker1-card/transport-routing-timepicker1-card.html">
+<link rel="import" href="transport-routing-fetch-card/transport-routing-fetch-card.html">
+<link rel="import" href="transport-routing-mapstudenttopoint-card/transport-routing-mapstudenttopoint-card.html">
+<link rel="import" href="transport-routing-studenttopoint-item-card/transport-routing-studenttopoint-item-card.html">
+<link rel="import" href="transport-routing-changepoint-card/transport-routing-changepoint-card.html">
+<link rel="import" href="transport-routing-changepoint-list/transport-routing-changepoint-list.html">
+<link rel="import" href="transport-routing-changepoint-service/transport-routing-changepoint-service.html">
+<link rel="import" href="transport-routing-routereport-card/transport-routing-routereport-card.html">
+<link rel="import" href="transport-routing-routereport-item-card/transport-routing-routereport-item-card.html">
+<link rel="import" href="transport-routing-gradewiseroute-report/transport-routing-gradewiseroute-report.html">
+<link rel="import" href="transport-routing-gradewiseroute-report-card/transport-routing-gradewiseroute-report-card.html">
+<link rel="import" href="transport-routing-trip-to-grade/transport-routing-trip-to-grade.html">
+<link rel="import" href="transport-routing-triptograde-display/transport-routing-triptograde-display.html">
