--- a/app/elements/schooltype-to-grade-displaycard/schooltype-to-grade-displaycard.html
+++ b/app/elements/schooltype-to-grade-displaycard/schooltype-to-grade-displaycard.html
@@ -55,6 +55,7 @@
         document.querySelector('feetype-schedule-card').FnSetGrades(allgrades);
         document.querySelector('discount-master-card').FnSetGrades(allgrades);
         document.querySelector('rtefeetype-schedule-card').FnSetGrades(allgrades);
+        document.querySelector('transport-routing-trip-to-grade').FnSetGrades(allgrades);
         // document.querySelector('fee-structure-schedulecard').FnSetGrades(allgrades);
         var a=[];
         var overall=[];
@@ -109,6 +110,7 @@
         document.querySelector('feetype-schedule-card').FnSetGrades(gradearr);
         document.querySelector('rtefeetype-schedule-card').FnSetGrades(gradearr);
         document.querySelector('discount-master-card').FnSetGrades(gradearr);
+        document.querySelector('transport-routing-trip-to-grade').FnSetGrades(allgrades);
         // document.querySelector('fee-structure-schedulecard').FnSetGrades(gradearr);
       },
       FnRefresh:function(){
